# midi-smith-adc-board

./: .clang-format  .clang-format-ignore  .clangd  .gitattributes  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  STM32H743XX_FLASH.ld  adc-board.ioc
.cursor/rules/: general-rules.mdc
.github/workflows/: ci.yml  release.yml
Core/Inc/: bdma.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: adc.c  bdma.c  dma.c  fdcan.c  freertos.c  gpio.c  main.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
app/include/app/: app_entry.h  application.hpp  config.hpp  version.hpp
app/include/app/analog/: acquisition_command.hpp  acquisition_control_requirements.hpp  acquisition_sequencer.hpp  acquisition_state.hpp  acquisition_state_requirements.hpp  adc12_frame_decoder.hpp  adc3_frame_decoder.hpp  adc_dma_control_requirements.hpp  adc_rank_mapped_frame_decoder.hpp  delay_requirements.hpp  queue_acquisition_control.hpp
app/include/app/composition/: subsystems.hpp
app/include/app/config/: analog_acquisition.hpp  config.hpp  sensors.hpp  sensors_validation.hpp  signal_filtering.hpp  signal_processing.hpp
app/include/app/logging/: logger_requirements.hpp
app/include/app/tasks/: analog_acquisition_task.hpp  sensor_rtt_telemetry_task.hpp  shell_task.hpp  test_task.hpp
app/include/app/telemetry/: queue_sensor_rtt_telemetry_control.hpp  sensor_rtt_telemetry_command.hpp  sensor_rtt_telemetry_control_requirements.hpp  telemetry_sender_requirements.hpp
app/include/app/time/: timestamp_counter_requirements.hpp
app/src/: app_entry.cpp  application.cpp  version.cpp
app/src/composition/: analog_subsystem.cpp  sensor_rtt_telemetry_subsystem.cpp  shell_subsystem.cpp  test_subsystem.cpp
app/src/shell/commands/: adc_command.cpp  sensor_rtt_command.cpp
app/src/tasks/: analog_acquisition_task.cpp  sensor_rtt_telemetry_task.cpp  shell_task.cpp  test_task.cpp
bsp/include/bsp/: board.hpp  gpio.hpp  gpio_requirements.hpp  memory_sections.hpp  pins.hpp  rtt_logger.hpp  rtt_telemetry_sender.hpp
bsp/include/bsp/adc/: adc_dma.hpp  adc_trigger_schedule.hpp
bsp/include/bsp/cortex/: axi_sram_nocache_mpu.hpp  d3_sram_nocache_mpu.hpp
bsp/include/bsp/serial/: uart_stream.hpp  uart_stream_irq_bridge.h
bsp/src/: board.cpp  gpio.cpp  pins.cpp  rtt_logger.cpp  rtt_telemetry_sender.cpp
bsp/src/adc/: adc_dma.cpp  adc_dma_callbacks.cpp  adc_trigger_schedule.cpp
bsp/src/cortex/: axi_sram_nocache_mpu.cpp  d3_sram_nocache_mpu.cpp
bsp/src/serial/: uart_stream_registry.cpp
bsp/src/time/: tim2_timestamp_counter.cpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
cmake/version/: generate_version_header.cmake  versioning.cmake
docs/: stm32cubemx-configuration-guide.md
domain/include/domain/: math.hpp
domain/include/shell/: command_dispatcher.hpp  command_parser.hpp  command_requirements.hpp  help_provider.hpp  line_editor.hpp  shell_engine.hpp
domain/src/: math.cpp
domain/src/shell/: command_dispatcher.cpp  command_parser.cpp  line_editor.cpp  shell_engine.cpp
hardware/: adc-board.md
os/include/os/: binary_semaphore.hpp  clock.hpp  memory.hpp  queue.hpp  queue_requirements.hpp  task.hpp  this_task.hpp
os/src/: binary_semaphore.cpp  clock.cpp  memory.cpp  queue.cpp  task.cpp  this_task.cpp
tests/: CMakeLists.txt  test_sanity.cpp
tests/app/analog/: acquisition_sequencer.test.cpp  adc12_frame_decoder.test.cpp  adc3_frame_decoder.test.cpp  adc_rank_mapped_frame_decoder.test.cpp
tests/app/shell/commands/: sensor_rtt_command.test.cpp
tests/domain/sensors/: filtering_sensor_group.test.cpp  processed_sensor_group.test.cpp  sensor_group.test.cpp  sensor_registry.test.cpp
tests/domain/shell/: command_dispatcher.test.cpp  command_parser.test.cpp  line_editor.test.cpp  shell_engine.test.cpp
tests/domain/shell/commands/: version_command.test.cpp
tests/domain/signal/filters/: ema_filter.test.cpp  filter_pipeline.test.cpp  identity_filter.test.cpp  sg5_smoother.test.cpp
tests/domain/signal/processing_pipeline/: continuous_pipeline.test.cpp  decimated_pipeline.test.cpp  test_stubs.hpp
tests/domain/signal/processors/: tia_current_converter.test.cpp
tools/: adc_freq.py  rtt_scope.py
(+26 files in other folders)
